# ai-pathfinder

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTENT_QUALITY.md  CONTRIBUTING.md  Dockerfile  EVOLUTION.md  README.md  SECURITY.md  VISION.md  app.py  config.py  docker-compose.yml  i18n.py  llm.py  logging_config.py  pyproject.toml  requirements.txt  resources.yaml  utils.py
.github/: FUNDING.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feedback.md  resource_recommendation.md
.github/workflows/: ci.yml
.pytest_cache/v/cache/: lastfailed  nodeids
.streamlit/: secrets.toml.example
scripts/: audit_content.py
tests/: test_app.py  test_config.py  test_i18n.py  test_llm.py  test_llm_extended.py  test_load_resources.py  test_logging_config.py  test_progress.py  test_utils_extended.py  test_views.py  test_views_extended.py
tests/e2e/: conftest.py  test_core_flows.py
views/: __init__.py  browser.py  chat.py  feedback.py  form.py  import_plan.py  path.py  progress.py  radar.py  settings.py
