[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-pathfinder"
version = "1.3.0"
description = "个性化AI学习路径规划工具 — 开源免费"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "moshierming" }]
keywords = ["ai", "learning-path", "streamlit", "llm", "education"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
]
dependencies = [
    "streamlit>=1.32.0",
    "openai>=1.14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
e2e = ["pytest>=7.0", "pytest-playwright>=0.4.0"]

[project.urls]
Homepage = "https://github.com/moshierming/ai-pathfinder"
Repository = "https://github.com/moshierming/ai-pathfinder"
Issues = "https://github.com/moshierming/ai-pathfinder/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end browser tests (deselect with '-m not e2e')"]

[tool.setuptools]
packages = ["views"]
